--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "homepage": "https://github.com/mmillheim/LevelsApp#readme",
   "dependencies": {
+    "bootstrap": "^5.0.2",
     "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.1",
-    "mongoose": "^5.12.13"
+    "mongoose": "^5.12.13",
+    "node-sass-middleware": "^0.11.0"
   }
 }
