--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.1",
+    "express-openid-connect": "^2.4.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.12.13",
     "node-sass-middleware": "^0.11.0"
