--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
   "dependencies": {
     "bootstrap": "^5.0.2",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.1",
     "express-openid-connect": "^2.4.0",
+    "express-session": "^1.17.2",
     "method-override": "^3.0.0",
     "mongoose": "^5.12.13",
-    "node-sass-middleware": "^0.11.0"
+    "node-sass-middleware": "^0.11.0",
+    "passport": "^0.4.1",
+    "passport-auth0": "^1.4.0"
   }
 }
